<resources>
    <string name="app_name">DnDApp</string>
    <string name="menu_string">D&amp;D Fifth Edition Character Helper</string>
    <string name="action_settings">Settings</string>
    <string name="new_button_string">New Character</string>
    <string name="new_creature_string">New Creature</string>
    <string name="title_activity_new_char">NewCharActivity</string>
    <string name="new_char_banner_string">Create A New Character</string>
    <string name="name_form_string">Name:</string>
    <string name="class_form_string">Class: </string>
    <string name="stat_grp_label_string">Stat Distribution:</string>
    <string name="optimal_string">Recommend</string>
    <string name="random_string">Random</string>
    <string name="manual_string">Manual</string>
    <string name="standard_array_string">Standard Array</string>
    <string name="race_form_string">Race:</string>
    <string name="strength_string">Strength</string>
    <string name="dexterity_string">Dexterity</string>
    <string name="constitution_string">Constitution</string>
    <string name="intelligence_string">Intelligence</string>
    <string name="wisdom_string">Wisdom</string>
    <string name="charisma_string">Charisma</string>
    <string name="saved_char_button_string">Saved Characters</string>
    <string name="die_roller_string">Die Roller</string>
    <string name="spellbook_button_string">Spell Book</string>
    <string name="saved_creature_button_string">Saved Creatures</string>
    <string name="clear_stat_button_string">Clear Stats</string>
    <string name="next_page_button_string">Next Page</string>

    <string-array name="class_list">
        <item>""</item>
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>

    <string-array name="race_list">
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Dragonborn</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Tiefling</item>
    </string-array>
    <string name="title_activity_die_roller">DieRollerActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="die_roller_banner_string">Die Roller</string>
    <string name="roll_button_string">Roll!</string>
    <string name="example_roll_string">Example: 1d20 will roll a single d20</string>
    <string name="die_roller_result_string">Result:</string>
    <string name="d4_string">1d4</string>
    <string name="d6_string">1d6</string>
    <string name="d8_string">1d8</string>
    <string name="d10_string">1d10</string>
    <string name="d12_string">1d12</string>
    <string name="d20_string">1d20</string>
    <string name="d100_string">1d100</string>
    <string name="title_activity_spell_book">SpellBookActivity</string>
    <string name="spellbook_sort_text">Search:</string>
    <string name="title_activity_saved_character">SavedCharacterActivity</string>
    <string name="title_activity_new_character_spells">NewCharacterSpells</string>
    <string name="subrace_form_string">Subrace:</string>

    <string-array name="dwarf_race_list">
        <item>Hill Dwarf</item>
        <item>Mountain Dwarf</item>
    </string-array>

    <string-array name="elf_race_list">
        <item>High Elf</item>
        <item>Wood Elf</item>
        <item>Dark Elf (Drow)</item>
    </string-array>
    <string name="title_activity_stat_distribution">StatDistributionActivity</string>
    <string name="cantrip_label_text">Cantrips</string>
    <string name="spell_label_text">Spells</string>
    <string name="title_activity_creature_generator">CreatureGeneratorActivity</string>
    <string name="creature_size_string">Size:</string>
    <string name="size_descriptor_text">ie: Small, medium, large, etc</string>
    <string name="creature_cr_string">Challenge Rating</string>
    <string name="title_activity_saved_creature">SavedCreatureActivity</string>
    <string name="creature_dice_string">Attack Dice</string>
    <string name="dice_descriptor_text">ie: 1d6, 4d12</string>
    <string name="creature_ability_string">Abilities</string>
    <string name="creature_submit_button_string">Create Creature</string>

</resources>
