<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#006699"
    tools:context="com.project.senior.dndapp.DieRollerActivity">

    <TextView
        android:id="@+id/die_roller_banner"
        android:text="@string/die_roller_banner_string"
        android:textSize="24sp"
        android:textColor="#F0F0F0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/first_die_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/die_roller_banner">

        <Button
            android:id="@+id/d4_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/d4_string"
            android:background="#F0F0F0"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/d6_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/d6_string"
            android:background="#F0F0F0"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/d8_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/d8_string"
            android:background="#F0F0F0"
            style="?android:attr/buttonBarStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_die_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_die_row">

        <Button
            android:id="@+id/d10_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/d10_string"
            android:background="#F0F0F0"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/d12_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/d12_string"
            android:background="#F0F0F0"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/d100_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/d100_string"
            android:background="#F0F0F0"
            style="?android:attr/buttonBarStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_die_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_die_row">

        <Button
            android:id="@+id/d20_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/d20_string"
            android:background="#F0F0F0"
            style="?android:attr/buttonBarStyle"/>

    </LinearLayout>

    <EditText
        android:id="@+id/die_roller_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:inputType="text"/>

    <LinearLayout
        android:id="@+id/die_roller_submit_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/die_roller_edittext">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#F0F0F0"
            android:text="@string/example_roll_string"/>

        <Button
            android:id="@+id/die_roller_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_button_string"/>

    </LinearLayout>

    <TextView
        android:id="@+id/show_die_roll_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/die_roller_result_string"
        android:textSize="24sp"
        android:textColor="#F0F0F0"
        android:layout_margin="5dp"
        android:layout_below="@+id/die_roller_submit_button_layout"/>

</RelativeLayout>
