<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity"
    android:background="#006699">

    <TextView
        android:text="@string/menu_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="#F0F0F0"
        android:id="@+id/menu_text" />

    <LinearLayout
        android:id="@+id/menu_row1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_text"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_button_string"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:id="@+id/new_char_button"
            android:background="#F0F0F0"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_creature_string"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:id="@+id/new_creature_button"
            android:background="#F0F0F0"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_row2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_row1"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saved_char_button_string"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:id="@+id/saved_char_button"
            android:background="#F0F0F0"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saved_creature_button_string"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:id="@+id/saved_creature_button"
            android:background="#F0F0F0"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_row3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_row2"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/die_roller_string"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:id="@+id/die_roller_button"
            android:background="#F0F0F0"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spellbook_button_string"
            android:layout_weight=".50"
            android:layout_margin="5dp"
            android:id="@+id/spellbook_button"
            android:background="#F0F0F0"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
