<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#006699"
    tools:context="com.project.senior.dndapp.NewCharActivity">

    <TextView
        android:id="@+id/new_char_banner"
        android:text="@string/new_char_banner_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#F0F0F0"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/name_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_char_banner"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/name_form_string"
            android:textColor="#F0F0F0"
            android:textSize="20sp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/char_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:layout_margin="5dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/race_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_row"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/race_form_string"
            android:textColor="#F0F0F0"
            android:textSize="20sp"
            android:layout_margin="5dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/race_spinner"
            android:layout_weight=".7"/>

    </LinearLayout>

    <TextView
        android:id="@+id/race_descriptor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_row"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_descriptor"
        android:layout_marginTop="5dp"
        android:id="@+id/subrace_row">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/subrace_form_string"
            android:textColor="#F0F0F0"
            android:textSize="20sp"
            android:layout_margin="5dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/subrace_spinner"
            android:layout_weight=".7"/>

    </LinearLayout>

    <TextView
        android:id="@+id/subrace_descriptor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subrace_row"/>

    <LinearLayout
        android:id="@+id/class_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subrace_descriptor"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/class_form_string"
            android:textColor="#F0F0F0"
            android:textSize="20sp"
            android:layout_margin="5dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/class_spinner"
            android:layout_weight=".7"/>

    </LinearLayout>

    <TextView
        android:id="@+id/class_descriptor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_row"/>

    <LinearLayout
        android:id="@+id/race_submit_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/race_next_page_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/next_page_button_string"/>

    </LinearLayout>

</RelativeLayout>

